--- a/locale/de.json
+++ b/locale/de.json
@@ -283,7 +283,8 @@
 	"pages.administration.students.index.title": "Schüler:innen verwalten",
 	"pages.administration.students.infobox.li-1": "Versende über die Schul-Cloud Registrierungslinks an die hinterlegten E-Mail-Adressen (auch direkt beim Importieren/Anlegen möglich)",
 	"pages.administration.students.infobox.li-2": "Drucke die Registrierungslinks als QR-Druckbogen, schneide sie aus und verteile die QR-Zettel an Nutzer:innen (bzw. deren Eltern)",
-	"pages.administration.students.infobox.li-3": "Verzichte auf das digitale Einholen der Zustimmungen. Nutze stattdessen das Papierformular und generiere Startpasswörter für deine Nutzer:innen (Mehr Infos)",
+	"pages.administration.students.infobox.li-3": "Verzichte auf das digitale Einholen der Zustimmungen. Nutze stattdessen das Papierformular und generiere Startpasswörter für deine Nutzer:innen ",
+	"pages.administration.students.infobox.more.info": "(mehr Infos)",
 	"pages.administration.students.infobox.paragraph-1": "Du hast folgende Möglichkeiten, die Nutzer:innen zum Abschluss der Registrierung zu führen:",
 	"pages.administration.students.infobox.paragraph-2": "Wähle dazu einen oder mehrere Nutzer:innen aus, z.B. alle Schüler:innen einer Klasse. Führe dann die gewünschte Aktion durch.",
 	"pages.administration.students.infobox.paragraph-3": "Alternativ möglich: Wechsele in den Bearbeiten-Modus des Nutzerprofils und rufe den individuellen Registrierungslink ab, um ihn händisch auf dem Weg deiner Wahl zu versenden.",
@@ -291,7 +292,8 @@
 	"pages.administration.students.infobox.LDAP.paragraph-1": "Deine Schule bezieht sämtliche Login-Daten aus einem Quellsystem (LDAP o.ä.). Die Nutzer:innen können sich mit dem Usernamen und Passwort aus dem Quellsystem in der Schul-Cloud einloggen.",
 	"pages.administration.students.infobox.LDAP.paragraph-2": "Beim ersten Login wird um die Einverständniserklärung gebeten, um die Registrierung abzuschließen.",
 	"pages.administration.students.infobox.LDAP.paragraph-3": "WICHTIG: Bei Schüler:innen unter 16 Jahren wird während des Registrierungsprozess die Zustimmung eines Erziehungsberechtigten verlangt. Bitte sorge in diesem Fall dafür, dass der erste Login im Beisein eines Elternteils stattfindet, in der Regel zu Hause.",
-	"pages.administration.students.infobox.LDAP.paragraph-4": "Finde weitere Informationen zur Registrierung im Hilfebereich",
+	"pages.administration.students.infobox.LDAP.paragraph-4": "Finde weitere Informationen zur Registrierung im ",
+	"pages.administration.students.infobox.LDAP.helpsection": "Hilfebereich",
 	"pages.administration.students.legend.icon.danger": "Nutzer:in angelegt",
 	"pages.administration.students.legend.icon.success": "Registrierung abgeschlossen",
 	"pages.administration.students.legend.icon.warning": " Schülereinverständnis fehlt",
