--- a/locale/en.json
+++ b/locale/en.json
@@ -59,6 +59,7 @@
 	"components.legacy.footer.team": "Team",
 	"components.legacy.footer.terms": "Terms of use",
 	"components.legacy.footer.termsofuse": "Terms of use and privacy policy",
+	"components.base.BaseIcon.error": "error loading icon {icon} from {source}. It might be not available or you are using the legacy Edge browser.",
 	"components.molecules.AccountCard.action.edit": "Edit",
 	"components.molecules.AddContentModal": "To be added to",
 	"components.molecules.ContentCard.report.body": "Report the content with the ID",
